--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1> Ali Kayani </h1>
+<html>
+<head>
+
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+
+</head>
+<body>
+
+<h1>Ali Kayani's portfolio</h1>
+<p>Welcome to my portfolio </p>
+
+
+</body>
+</html>
