--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<html>
+<!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
 
 <h1>Ali Kayani's portfolio</h1>
 <p>Welcome to my portfolio </p>
 
-
-</head>
 </body>
 </html>
