--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
+    <meta htt-equiv="X-UA-Compatible" content="IE=edge"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<DIV
+     
 
-<h1>Ali Kayani's portfolio</h1>
-<p>Welcome to my portfolio </p>
+
+
 
 </body>
 </html>
