--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="images/logo.png" class ="logo">
+            <img src="images/blackandblue.png" class ="logo">
             <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -21,7 +21,7 @@
             </ul>
         </nav> 
         <div class="header-text">
-            <p>Asipring Software Engineer</p>
+            
             <H1>Hey, I'm <span>Ali</span> <span>Kayani</span><br>Thanks for being here!</H1>
         </div>
     </div>
@@ -37,9 +37,7 @@
 
             <div class="about-col-2">
                 <h1 class = "sub-title">About Me</h1>
-                <p>Senior Student @ UC Irvine!</p>
-
-
+                <p>Senior Student @ UC Irvine! An avid coder and an aspiring Software Engineer/Developer. In my spare time, I enjoy excercising, spending time with friends and loved ones and travelling! </p>
                 <div class="tab-titles">
                 <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                 <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -107,7 +105,7 @@
                 <div class="layer">
                     <h3>First Piece of Work</h3>
                     <p>This piece of work displays pure artistry.</p>
-                    <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                    <a href="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExc21jeHR4NDJibTJnZTg3ejVibGRzNDFzdXZreXltNTM4d2VqZ3B0MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Ju7l5y9osyymQ/giphy.gif"><i class="fa-solid fa-square-up-right"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -115,7 +113,7 @@
                 <div class="layer">
                     <h3>Second Piece of Work</h3>
                     <p>This piece of work portrays exquisite design. </p>
-                    <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                    <a href="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExc21jeHR4NDJibTJnZTg3ejVibGRzNDFzdXZreXltNTM4d2VqZ3B0MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Ju7l5y9osyymQ/giphy.gif"><i class="fa-solid fa-square-up-right"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -123,11 +121,11 @@
                 <div class="layer">
                     <h3>Third Piece of Work</h3>
                     <p>This piece of work showcases sheer grit.</p>
-                    <a href="#"><i class="fa-solid fa-square-up-right"></i></a>
+                    <a href="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExc21jeHR4NDJibTJnZTg3ejVibGRzNDFzdXZreXltNTM4d2VqZ3B0MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Ju7l5y9osyymQ/giphy.gif"><i class="fa-solid fa-square-up-right"></i></a>
                 </div>
             </div>
         </div>
-        <a href ="#" class="btn">See more</a>
+        <a href ="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExc21jeHR4NDJibTJnZTg3ejVibGRzNDFzdXZreXltNTM4d2VqZ3B0MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Ju7l5y9osyymQ/giphy.gif" class="btn">See more</a>
     </div>
 </div>
 <!-------------------contact--------->
@@ -139,9 +137,9 @@
                 <p><i class="fa-solid fa-paper-plane"></i> alikayanimd@gmail.com</p>
                 <p><i class="fa-solid fa-square-phone"></i> 347-218-2198</p>
                 <div class="social-icons">
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-twitter-square"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/?stype=lo&flo=1&deoia=1&jlou=Afe6lY2OSJoykw5_EOOJK3Y1xRLFBUZTjD4FebAdI8ydhJTTNqqUlYjhCSzbjGoRq7SzV0mUZBCyKrolf6-rfyHdSp24QzhygKTNhDLhtXQQHw&smuh=19950&lh=Ac9LNrCd-kVkt07JfjE"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://x.com/?lang=en&mx=2"><i class="fa-brands fa-twitter-square"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/ali-kayani/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="images/AK resumep.pdf" download class="btn btn2">Download Resume</a>
