--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="layer">
                     <h3>First Piece of Work</h3>
                     <p>This piece of work displays pure artistry.</p>
-                    <a href="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExc21jeHR4NDJibTJnZTg3ejVibGRzNDFzdXZreXltNTM4d2VqZ3B0MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Ju7l5y9osyymQ/giphy.gif"><i class="fa-solid fa-square-up-right"></i></a>
+                    <a href=""><i class="fa-solid fa-square-up-right"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -113,7 +113,7 @@
                 <div class="layer">
                     <h3>Second Piece of Work</h3>
                     <p>This piece of work portrays exquisite design. </p>
-                    <a href="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExc21jeHR4NDJibTJnZTg3ejVibGRzNDFzdXZreXltNTM4d2VqZ3B0MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Ju7l5y9osyymQ/giphy.gif"><i class="fa-solid fa-square-up-right"></i></a>
+                    <a href=""><i class="fa-solid fa-square-up-right"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -121,11 +121,11 @@
                 <div class="layer">
                     <h3>Third Piece of Work</h3>
                     <p>This piece of work showcases sheer grit.</p>
-                    <a href="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExc21jeHR4NDJibTJnZTg3ejVibGRzNDFzdXZreXltNTM4d2VqZ3B0MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Ju7l5y9osyymQ/giphy.gif"><i class="fa-solid fa-square-up-right"></i></a>
+                    <a href=""><i class="fa-solid fa-square-up-right"></i></a>
                 </div>
             </div>
         </div>
-        <a href ="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExc21jeHR4NDJibTJnZTg3ejVibGRzNDFzdXZreXltNTM4d2VqZ3B0MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Ju7l5y9osyymQ/giphy.gif" class="btn">See more</a>
+        <a href ="" class="btn">See more</a>
     </div>
 </div>
 <!-------------------contact--------->
